<resources>
    <string name="edge_label" translatable="false">Edge Stopwatch</string>
    <string name="edge_description" translatable="false">Edge Stopwatch</string>

    <string name="app_name" translatable="false">Edge Stopwatch</string>
    <string name="default_display_time" translatable="false">00.00</string>
    <string name="start_stopwatch">Start</string>
    <string name="pause_stopwatch">Pause</string>
    <string name="lap_stopwatch">Lap</string>
    <string name="resume_stopwatch">Resume</string>
    <string name="stop_stopwatch">Stop</string>
    <string name="reset_stopwatch">Reset</string>

    <string name="clear_laps">CLEAR LAPS</string>
    <string name="clear_history">CLEAR HISTORY</string>

    <string name="history_tab_header">HISTORY</string>
    <string name="laps_tab_header">LAPS</string>
</resources>