<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorDarkBackground">

    <LinearLayout
            android:id="@+id/panelUpperContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
                android:id="@+id/displayInlineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_display_time"
                android:textAlignment="center"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/stopwatch_text_size"
                tools:text="00:00.00" />

        <LinearLayout
                android:id="@+id/displayMultilineContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical"
                android:visibility="gone">

            <TextView
                    android:id="@+id/displayLargeMinutesLineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/default_display_time"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/stopwatch_large_minutes_text_size"
                    tools:text="00" />

            <TextView
                    android:id="@+id/displayLargeSecondsLineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"
                    android:text="@string/default_display_time"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/stopwatch_large_seconds_text_size"
                    tools:text="00" />

            <TextView
                    android:id="@+id/displayLargeCentisLineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/default_display_time"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/stopwatch_large_millis_text_size"
                    tools:text="00" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextLight" />

    <LinearLayout
            android:id="@+id/panelLowerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBackgroundLighter"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="18dp"
            android:paddingEnd="24dp"
            android:paddingBottom="18dp">


        <LinearLayout
                android:id="@+id/runningButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

            <Button
                    android:id="@+id/lapButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/oval_button"
                    android:backgroundTint="@color/colorButtonBlue"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/lap_stopwatch"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/button_text_size" />

            <Button
                    android:id="@+id/stopButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/oval_button"
                    android:backgroundTint="@color/colorButtonOrange"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/stop_stopwatch"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/button_text_size"
                    android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/notRunningButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:id="@+id/startButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/oval_button"
                    android:backgroundTint="@color/colorButtonGreen"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/start_stopwatch"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/pausedButtons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

            <Button
                    android:id="@+id/resumeButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/oval_button"
                    android:backgroundTint="@color/colorButtonGreen"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/resume_stopwatch"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/button_text_size" />

            <Button
                    android:id="@+id/resetButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/oval_button"
                    android:backgroundTint="@color/colorButtonRed"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/reset_stopwatch"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/button_text_size"
                    android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>